<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/card_adblockeradvise"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/adblockeradvise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:text="@string/no_adblocker"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/adblockeradvise_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/no_adblocker_description"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_again"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/again_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:text="@string/again_adblocker"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/again_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/again_adblocker_description"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_custom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/again_custom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:text="@string/custom_adblocker"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/again_custom_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/custom_adblocker_description"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
